kumuluz is using unaccesable packages, fixed in bash